[package]
name = "bevy_my_template" # TODO
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "game"
path = "src/main.rs"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[dependencies]
rand = "0.8.5"
bevy = { version = "0.11", features = ["jpeg"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
bevy = { version = "0.11", features = ["dynamic_linking"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
bevy = { version = "0.11" }